--- a/07-projeto-to-do-list/css/style.css
+++ b/07-projeto-to-do-list/css/style.css
@@ -1,112 +1,139 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
+
+:root {
+    --bg-primary: #2C2C2C;
+    --bg-secondary: #242424;
+    --bg-ternary: #393939;
+    --border-color: #444;
+    --primary-color: #ff7066;
+    --secondary-color: #0DD657;
+}
+
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	color: #fff;
-	font-family: Helvetica;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: white;
+    font-family: Helvetica, sans-serif;
 }
 
 body {
-	background-color: #2c2c2c;
+    background-color: var(--bg-primary);
 }
 
 h2 {
-	margin-bottom: 0.9rem;
-  font-size: 1.6rem;
+    margin-bottom: 25px;
 }
 
-/* to-do container  */
+/* To do Container */
+
 #main-container {
-	background-color: #242424;
-	position: relative;
-	max-width: 50%;
-	margin: 0 auto;
-	padding: 3%;
-	margin-top: 10%;
+    background-color: var(--bg-secondary);
+    position: relative;
+    max-width: 50%;
+    margin: 5vh auto 0 auto;
+    padding: 30px;
 }
 
-/* add container */
+/* add-container */
+
 #add-container {
-	margin-bottom: 2rem;
-	padding-bottom: 2rem;
-	border-bottom: 1px solid #444;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid var(--border-color);
 }
 
-#add-container input,
-#add-container button {
-	padding: 10px;
-	background-color: #393939;
-	border: none;
-	width: 80%;
-	display: inline-block;
+#add-container input, #add-container button {
+    padding: 10px;
+    background-color: var(--bg-ternary);
+    border: none;
+    width: 80%;
+    display: inline-block;
 }
 
 #add-container button {
-	width: 18%;
-	cursor: pointer;
-	transition: 0.5s;
+    width: 18%;
+    cursor: pointer;
+    transition: .5s;
 }
 
 #add-container button i {
-	color: #ff7066;
+    color: var(--primary-color);
 }
 
 #add-container button:hover {
-	background-color: #ff7066;
+    background-color: var(--primary-color);
 }
 
 #add-container button:hover > i {
-	color: #242424;
+    color: var(--bg-secondary);
 }
 
-/* task-container */
+/* Task container */
+
 .task {
-	margin-bottom: 1rem;
-	padding-bottom: 1rem;
-	border-bottom: 1px solid #444;
-	position: relative;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid var(--border-color);
+    position: relative;
 }
 
-.hidden {
-	display: none;
+.hide {
+    display: none;
 }
 
-.task:hover .bi-trash-fill {
-	display: block;
+.task:hover .bi-trash {
+    display: block;
 }
 
-.bi-check-lg {
-	border-radius: 50%;
-	border: 1px solid #444;
-	padding: 4px;
-	margin-right: 10px;
-	cursor: pointer;
+.bi.bi-check2-circle {
+    cursor: pointer;
+    padding: 7px;
+    margin-right: 10px;
+    font-size: 1.2rem;
 }
 
-.bi-check-lg.done {
-	color: #0dd657;
-	border: #0dd657 1px solid;
+.bi.bi-check2-circle.done {
+    color: var(--secondary-color);
 }
 
-.bi-check-lg:hover {
-	color: #ff7066;
-	border: #ff7066 solid 1px;
+
+.bi.bi-trash:hover {
+    color: var(--primary-color);
 }
 
-.bi-trash-fill {
-	position: absolute;
-	right: .4rem;
-	top: 0.1rem;
-  cursor: pointer;
-  display: none;
+.bi.bi-trash {
+    position: absolute;
+    right: 0;
+    top: 8px;
+    font-size: 0.8rem;
+    cursor: pointer;
+    display: none;
 }
 
-.bi-trash-fill:hover {
-  color: #ff7066;
+#empty-tasks {
+    text-align: center;
 }
 
-#empty-tasks{
-  text-align: center;
+/* mobile */
+
+@media(max-width: 480px) {
+    body {
+        padding: 20px;
+    }
+
+    h2 {
+        text-align: center;
+    }
+
+    #main-container {
+        max-width: 100%;
+        margin-top: 0px;
+    }
+
+    .bi.bi-trash {
+        display: block;
+    }
+
 }
